test/regress/kind/nra/valid/cfa_test0015.mcmt
;;; generated by vmt2mcmt.py on Thu May 10 20:20:48 2018.
;;; run sally with option --lsal-extensions
(define-state-type state_type
(
   (v1 Real)
   (v2 Real)
   (v3 Real)
   (v4 Real)
))
;;
;; Initial states
;;
(define-states initial_states state_type 
   (and (and (<= v1 60) (and (<= 0 v1) (and (<= v2 3600) (and (<= 0 v2) (and (<= 0 v3) (<= v3 10000000)))))) (and (=  v4 0) (<= (*  v1 v1) v2))))
;;
;; Transition relation
;;
(define-transition transition state_type 
   (and (or  (and (=  v3 v3') (and (=  v2 v2') (and (=  v1 v1') (and (=  v4' 0) (and (=  v4 1) (<= (+  (*  70 v1) (*  (- 1) v2)) 2100)))))) (or  (and (=  v3 v3') (and (=  v2 v2') (and (=  (+  v1 (+  v3 (*  (- 1) v1'))) 0) (and (=  v4' 1) (and (=  v4 0) (and (or  (=  v3 5) (not (and (<= v1 60) (not (<= (*  (+  v1 (- 10)) (+  v1 (- 10))) v2))))) (and (or  (=  v3 0) (not (and (not (<= (*  (+  v1 (- 5)) (+  v1 (- 5))) v2)) (<= (*  (+  v1 (- 10)) (+  v1 (- 10))) v2)))) (and (or  (=  v3 1) (not (<= (*  v1 v1) v2))) (or  (=  v3 4) (not (and (not (<= (*  v1 v1) v2)) (<= (*  (+  v1 (- 5)) (+  v1 (- 5))) v2)))))))))))) (and (=  v3 v3') (and (=  v2 v2') (and (=  v1 v1') (and (=  v4' 2) (and (=  v4 1) (not (<= (+  (*  70 v1) (*  (- 1) v2)) 2100))))))))) (and (and (<= v1 60) (and (<= 0 v1) (and (<= v2 3600) (and (<= 0 v2) (and (<= 0 v3) (<= v3 10000000)))))) (and (<= v1' 60) (and (<= 0 v1') (and (<= v2' 3600) (and (<= 0 v2') (and (<= 0 v3') (<= v3' 10000000)))))))))
;;
;; Transition system
;;
(define-transition-system T state_type 
  initial_states
  transition
)
;;
;; Property
;;
(query T 
   (not (=  v4 2))
)
