test/regress/kind/nra/invalid/example_4.mcmt
;;; generated by vmt2mcmt.py on Thu May 10 20:20:50 2018.
;;; run sally with option --lsal-extensions
(define-state-type state_type
(
   (v1 Real)
   (v2 Real)
   (v3 Real)
   (v4 Real)
))
;;
;; Initial states
;;
(define-states initial_states state_type 
   (and (=  v4 0) (and (=  v3 (*  v1 v2)) (and (<= 2 v1) (<= 2 v2)))))
;;
;; Transition relation
;;
(define-transition transition state_type 
   (and (or  (=  v3' (*  v1' v2')) (not (<= v4 4))) (and (=  (+  v4 (*  (- 1) v4')) (- 1)) (and (=  (+  v1 (*  (- 1) v1')) (- 1)) (=  (+  v2 (*  (- 1) v2')) (- 1))))))
;;
;; Transition system
;;
(define-transition-system T state_type 
  initial_states
  transition
)
;;
;; Property
;;
(query T 
   (<= (+  v1 (+  v2 (*  (- 1) v3))) 0)
)
